# agentic-lab

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/prompts/: adr.prompt.md  design.prompt.md  refactor.prompt.md  review.prompt.md
agent/: __init__.py  result.py  runtime.py
app/: main.py
conversation/: __init__.py  models.py
core/: __init__.py  config.py
docs/: sprint1.md  sprint10.md  sprint2.md  sprint3.md  sprint4.md  sprint5.md  sprint6.md  sprint7.md  sprint8.md  sprint9.md
docs/adr/: 001-sprint1-project-foundation.md  002-sprint2-llm-infrastructure.md  003-sprint3-tool-framework.md  004-sprint4-tool-discovery.md  005-sprint5-provider-tool-representation.md  006-sprint6-tool-invocation.md  007-sprint7-tool-call-bridge.md  008-sprint8-conversation-agent-runtime.md  009-sprint9-tool-expansion-workspace-safety.md  010-sprint10-system-prompts.md  README.md
llm/: __init__.py  base.py  client.py  conversation_representation.py  provider_tool_call.py  response.py  tool_call_bridge.py
llm/providers/: __init__.py  deepseek.py
llm/representations/: __init__.py  base.py  deepseek.py
prompts/: __init__.py  assembler.py  models.py
tests/: test_conversation.py  test_conversation_representation.py  test_invoker.py  test_representations.py  test_runtime.py  test_tool_call_bridge.py
tools/: __init__.py  base.py  catalog.py  execution_context.py  filesystem.py  grep.py  invocation.py  invoker.py  metadata.py  registry.py  result.py  shell.py
