[project]
name = "agentic-lab"
version = "0.1.0"
description = "A production-ready Python project for building and experimenting with AI agents."
requires-python = ">=3.13"
authors = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "agent", "llm", "tools", "core"]
